cmake_minimum_required(VERSION 3.23)
project(yandex_23)

set(CMAKE_CXX_STANDARD 23)

add_executable(yandex_23 main.cpp)
add_executable(A A.cpp)
add_executable(B B_IceSculptures.cpp)
add_executable(C C_Treider.cpp)
add_executable(D D_CountriesForClassmates.cpp)
add_executable(C_1 C_postupashki.cpp)
add_executable(D_1 4_Postupashki.cpp)
add_executable(C_Andrew C_Andrew.cpp)